# Pomodoro

./: .gitignore  .prod.env  Dockerfile  Makefile  README.md  alembic.ini  dependecy.py  docker-compose.test.yml  docker-compose.yml  exception.py  fixtures.py  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 05ef5b85c590_change_to_async.py  1064e087f23b_tables__init.py  32048d7dc697_access_token_nullable.py  4601b5f08142_user_id_added.py  645b3a3d8966_access_token_taken_out.py  7fa43e4e9d95_user_init.py  (+8 more)
app/: consumer.py  dependecy.py  exception.py  main.py  settings.py
cache/: accessor.py
client/: __init__.py  google_client.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
fastApi_Stepik/pomodoro-time/: Makefile  dependence.py  main.py  pyproject.toml  settings.py
fastApi_Stepik/pomodoro-time/alembic/versions/: b3a82e6f34e2_init.py
fastApi_Stepik/pomodoro-time/cache/: accessor.py
fastApi_Stepik/pomodoro-time/database/: database.py  models.py
fastApi_Stepik/pomodoro-time/handlers/: __init__.py  tasks.py
fastApi_Stepik/pomodoro-time/repository/: __init__.py  cache_task.py  task.py
fastApi_Stepik/pomodoro-time/service/: __init__.py  task.py
handlers/: auth.py  categories.py  ping.py  tasks.py  user.py
infra/: gunicorn.conf.py
models/: tasks.py  user.py
repository/: task.py  user.py
schema/: __init__.py  category.py  task.py  taskschema.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
workflows/: .github.ci.yml
(+27 files in other folders)
